skill bar completed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
       "esnext"
     ],
     "allowJs": true,
+
+    "sourceMap": true,
+    
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -22,5 +25,6 @@
   },
   "include": [
     "src"
-  ]
+  ],
+  "exclude": ["node_modules"]
 }
